  disappear, such as file description pages loaded via $wgUseInstantCommons or
  pages transcluded cross-wiki via $wgEnableScaryTranscluding.
* (bug 56912) Show correct link color on cached result of Special:DeadendPages.

=== API changes in 1.23 ===
* (bug 54884) action=parse&prop=categories now indicates hidden and missing
  categories.

=== Languages updated in 1.23===

MediaWiki supports over 350 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

=== Other changes in 1.23 ===
* The rc_type field in the recentchanges table has been superseded by a new
  rc_source field.  The rc_source field is a string representation of the
  change type where rc_type was a numeric constant.  This field is not yet
  queried but will be in a future point release of 1.22.
** Utilize update.php to create and populate this new field.  On larger wiki's
   which do not wish to update recentchanges table in one large update please
   review the sql and comments in maintenance/archives/patch-rc_source.sql.
** The rc_type field of recentchanges will be deprecated in a future point
   release.
* The global variable $wgArticle has been removed after a lengthy deprecation.
* The global functions addButton and insertTags (for mw.toolbar.addButton and
  mw.toolbar.insertTags) now emits mw.log.warn when accessed.

== Compatibility ==

MediaWiki 1.23 requires PHP 5.3.2 or later.

MySQL is the recommended DBMS. PostgreSQL or SQLite can also be used, but
support for them is somewhat less mature. There is experimental support for
Oracle.

The supported versions are:

* MySQL 5.0.2 or later
* PostgreSQL 8.3 or later
* SQLite 3.3.7 or later
* Oracle 9.0.1 or later

== Upgrading ==

1.23 has several database changes since 1.22, and will not work without schema
updates. Note that due to changes to some very large tables like the revision