@@ -7,10 +7,33 @@
  * @covers ApiQuery
  */
 class ApiQueryTest extends ApiTestCase {
+	/**
+	 * @var array Storage for $wgHooks
+	 */
+	protected $hooks;
 
 	protected function setUp() {
+		global $wgHooks;
+
 		parent::setUp();
 		$this->doLogin();
+
+		// Setup en: as interwiki prefix
+		$this->hooks = $wgHooks;
+		$wgHooks['InterwikiLoadPrefix'][] = function ( $prefix, &$data ) {
+			if ( $prefix == 'en' )
+			{
+				$data = array( 'iw_url' => 'wikipedia' );
+			}
+			return false;
+		};
+	}
+
+	protected function tearDown() {
+		global $wgHooks;
+		$wgHooks = $this->hooks;
+
+		parent::tearDown();
 	}
 
 	public function testTitlesGetNormalized() {
@@ -63,5 +86,39 @@ class ApiQueryTest extends ApiTestCase {
 
 		$this->assertArrayHasKey( 'missing', $data[0]['query']['pages'][-2] );
 		$this->assertArrayHasKey( 'invalid', $data[0]['query']['pages'][-1] );
+	}
+
+	/**
+	 * Test the ApiBase::titlePartToKey function
+	 *
+	 * @param string $titlePart
+	 * @param int $namespace
+	 * @param string $expected
+	 * @param string $description
+	 * @dataProvider provideTestTitlePartToKey
+	 */
+	function testTitlePartToKey( $titlePart, $namespace, $expected, $expectException ) {
+		$api = new MockApiQueryBase();
+		$exceptionCaught = false;
+		try {
+			$this->assertEquals( $expected, $api->titlePartToKey( $titlePart, $namespace ) );
+		} catch ( UsageException $e ) {
+			$exceptionCaught = true;
+		}
+		$this->assertEquals( $expectException, $exceptionCaught,
+				'UsageException thrown by titlePartToKey' );
+	}
+
+	function provideTestTitlePartToKey() {
+		return array(
+			array( 'a  b  c', NS_MAIN, 'A_b_c', false ),
+			array( 'x', NS_MAIN, 'X', false ),
+			array( 'y ', NS_MAIN, 'Y_', false ),
+			array( 'template:foo', NS_CATEGORY, 'Template:foo', false ),
+			array( 'en:foo', NS_CATEGORY, 'En:foo', false ),
+			array( "\xF7", NS_MAIN, null, true ),
+			array( 'template:foo', NS_MAIN, null, true ),
+			array( 'en:foo', NS_MAIN, null, true ),
+		);
 	}
 }
